syntax = "proto3";

package ticket.svc.project;

import "common.proto";

message Shortcode {
	string shortcode = 1;
}

message Project {
	string name = 1;
	string shortcode = 2;
}

message ProjectResponse {
	Project project = 1;
	ticket.common.Error error = 2;
}

message ProjectsResponse {
	repeated Project project = 1;
	ticket.common.Error error = 2;
}

service Projects {
	rpc Get(Shortcode) returns (ProjectResponse);
	rpc GetAll(ticket.common.Empty) returns (ProjectsResponse);
}
